# MoCAM

./: README.md
ai_pilot_demo/: CMakeLists.txt  README.md  package.xml  setup.cfg
ai_pilot_demo/src/: cmd_interface.py  read_camera.py  route_navi.py
demo_network_pytorch/: LICENSE  README.md  data.py  test.py  train.py
end_to_end_ai_control/: README.md
end_to_end_ai_control/src/: ai_pilot_common_lib.py  ai_pilot_data.py  ai_pilot_running.py
endd_to_end_ai_control/: CMakeLists.txt  setup.py
endd_to_end_ai_control/src/: ai_pilot_model.py  data_collector.py
